--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>HTML DOC STRUC DT</title>
+</head>
+<body></body>
+</html>
 <!-- Write your HTML in this file -->
